* Bugs fixed in 6.2.28
343 	qnsolver 	Improve compatibility with Java Modelling Tools 
356 	miscella 	rpm build issues.
411 	lqiolib 	JMVA issues.
412 	qnsolver 	Save JMVA WhatIf results.
413 	Document 	Missing plainurl. 	
415 	petrisrv 	Signal SIGSEGV in LQIO::DOM::Phase::getServiceTime () at dom_phase.cpp:88 
416 	lqiolib 	Fixes for plotting population mix WhatIf output. 
417 	qnsolver 	Bounds solution issues. 
418 	lqsim 		lqsim crashes running -t... 	

* Bugs fixed in 6.2.27
192 	libmva 	 	MVA::marginalProbabilities2 mis-dimensioned. 
356 	miscella 	rpm build issues.
373 	lqns 	 	Processor waiting times at Rolia multiserver make no sense. 
380 	lqns 	 	lqns hangs with Conway multiserver. 
382 	lqn2xxx 	lqn2ps -Oout doesn't print processors. 
383 	lqiolib 	<pre> precedences can accept more than one activity in XML (JSON?) input. 
385 	petrisrv 	V5 petrisrvn: faulty models causing aborts.
386 	lqn2csv 	getopt_long headaches. 
387 	srvndiff 	File glob not working. 
389 	srvndiff 	C:\msys64\mingw32\bin\srvndiff.exe: model-001.lqxo:12: error: unclosed token 
390 	lqn2xxx 	lqn2xxx: command not found. 
391 	lqsim 		lqsim/regression/Makefile.am, 5*-replication. 
392 	petrisrv 	Calls are not being constructed
393 	lqiolib 	Save (and print) marginal queue probabilities.
395 	petrisrv 	V5 petrisrvn: faulty models causing aborts or failing.
397 	lqiolib 	Add qnap2 parser for BCMP models.
398 	lqiolib 	Refactor LQX math handing from ExternalVariables to LQX Expressions.
399 	lqiolib 	WhatIf construction is bogus.
400 	lqn2xxx 	Converting from json to lqn fails on Windows.
401 	libmva 		libc++abi: terminating with uncaught exception of type std::invalid_argument: default-output
402 	miscella 	Mac M1 issues.
403 	libmva 	 	43-activities.lqnx: Floating point exception: mva.cc 541: Inexact result, Invalid operation
405 	lqns 	 	Optimizer bug: option.h
406 	libmva 	 	Refactor fpgoop.
407 	lqns 	 	--srvn-layering crashes in V6 interlocking code