@@ -1,0 +1,3 @@
+#!/bin/sh
+# For using the 32-bit version.  Note! Don't use "make CXXFLAGS=..." when compiling.
+./configure 'CFLAGS=-m32' 'CXXFLAGS=-m32' --disable-shared -C --prefix=/usr/local
