@@ -1,5 +1,5 @@
 ; Script generated by the HM NIS Edit Script Wizard.
-; $Id: lqn-solvers.nsi 16406 2023-02-08 01:54:34Z greg $
+; $Id: lqn-solvers.nsi 16416 2023-02-11 23:52:40Z greg $
 
 ; HM NIS Edit Wizard helper defines
 !define PRODUCT_NAME "LQN Solvers"
@@ -41,13 +41,7 @@
 ; MUI end ------
 
 Name "${PRODUCT_NAME} ${PRODUCT_VERSION}"
-<<<<<<< .working
 OutFile "lqn_x86_6_2_28.exe"
-||||||| .merge-left.r16400
-OutFile "lqn_nt4_5_28_0.exe"
-=======
-OutFile "lqn_nt4_5_28_1.exe"
->>>>>>> .merge-right.r16405
 InstallDir "$PROGRAMFILES\LQN Solvers"
 InstallDirRegKey HKLM "${PRODUCT_DIR_REGKEY}" ""
 ShowInstDetails show
