@@ -1,6 +1,9 @@
 * Bugs fixed in 6.2.28
+297 	lqiolib 	Gnuplot and result enhancements
 343 	qnsolver 	Improve compatibility with Java Modelling Tools 
 356 	miscella 	rpm build issues.
+359 	lqiolib 	Expressions are not output by Spex::print_header().
+366 	lqn2xxx 	EXC_BAD_ACCESS Layer::transmorgrify() at layer.cc:571:17 [opt] 
 411 	lqiolib 	JMVA issues.
 412 	qnsolver 	Save JMVA WhatIf results.
 413 	Document 	Missing plainurl. 	
@@ -8,6 +11,7 @@
 416 	lqiolib 	Fixes for plotting population mix WhatIf output. 
 417 	qnsolver 	Bounds solution issues. 
 418 	lqsim 		lqsim crashes running -t... 	
+419 	qnsolver 	model.cc:(.text+0x18ff): undefined reference to `typeinfo for QNIO::JMVA_Document'
 
 * Bugs fixed in 6.2.27
 192 	libmva 	 	MVA::marginalProbabilities2 mis-dimensioned. 
